--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,8 @@
-@import '../node_modules/bootstrap/scss/bootstrap';
 @import 'variables';
+@import '../node_modules/bootstrap/scss/bootstrap';
 @import 'navbar';
 @import 'header';
+@import 'offer';
 // @import './base.scss';
 //@import 'bootstrap/scss/bootstrap.scss';
 // @import './header.scss';
