--- a/index.css
+++ b/index.css
@@ -1,8 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
-:root {
-  --bs-body-color: #222222;
-}
-
 /*!
  * Bootstrap v5.2.0-beta1 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -4730,11 +4726,11 @@ fieldset:disabled .btn {
 
 .btn-close {
   box-sizing: content-box;
-  width: 1em;
-  height: 1em;
+  width: 12px;
+  height: 12px;
   padding: 0.25em 0.25em;
   color: #222222;
-  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23222222'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23222222'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/12px auto no-repeat;
   border: 0;
   border-radius: 0.375rem;
   opacity: 0.5;
@@ -5710,7 +5706,7 @@ fieldset:disabled .btn {
 }
 
 .offcanvas-sm, .offcanvas-md, .offcanvas-lg, .offcanvas-xl, .offcanvas-xxl, .offcanvas {
-  --bs-offcanvas-width: 50%;
+  --bs-offcanvas-width: 232px;
   --bs-offcanvas-height: 30vh;
   --bs-offcanvas-padding-x: 1rem;
   --bs-offcanvas-padding-y: 1rem;
@@ -10473,7 +10469,17 @@ fieldset:disabled .btn {
   }
 }
 
-.navbar-dark .navbar-toggler-icon {
+:root {
+  --bs-body-color: #222222;
+  --bs-navbar-active-color: $black;
+  --bs-navbar-color: $black;
+}
+
+.navbar-dark {
+  --bs-navbar-color: #222222;
+}
+
+.navbar-toggler-icon {
   background-image: url(images/navbar/burger.svg);
 }
 
@@ -10488,6 +10494,40 @@ fieldset:disabled .btn {
 
 .navbar {
   height: 74px;
+}
+
+.navbar .offcanvas-header {
+  padding: 16px 16px 24px 34px;
+}
+
+.navbar .offcanvas-header .offcanvas-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+
+.navbar .offcanvas-body {
+  padding-top: 0;
+  padding-left: 34px;
+}
+
+.navbar .offcanvas-body .nav-link {
+  font-size: 14px;
+  line-height: 17px;
+  color: #6f6e6e;
+  margin-left: 22px;
+  padding: 5px 0;
+}
+
+.navbar .offcanvas-body .navbar-nav {
+  margin-bottom: 15px;
+}
+
+.navbar .offcanvas-body .navbar-nav :first-child > .nav-link {
+  color: #f16d7f;
+  margin-left: 0;
+  padding-top: 0;
 }
 
 .cart {
@@ -10596,6 +10636,7 @@ fieldset:disabled .btn {
 }
 
 .offer {
+  --bs-columns: 3;
   grid-template-rows: repeat(3, 2fr) 1fr;
   gap: 32px;
   padding-top: 64px;
