--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,16 +3,12 @@
 $navbar-height: 42px;
 $black: #222222;
 $pink: #ff6a6a;
-
 $primary: #014524;
 $mint: #cad7d0;
 $green: #014524;
 $light-pink: #f1e4e6;
 $grey: #6b6b6b;
-
-:root {
-  --bs-body-color: #222222;
-}
+$btn-close-width: 12px;
 
 $enable-grid-classes: false;
 $enable-cssgrid: true;
@@ -20,7 +16,7 @@ $paragraph-margin-bottom: 0;
 $navbar-dark-toggler-icon-bg: url(@/images/navbar/burger.svg);
 $navbar-dark-toggler-border-color: rgba($black, 0.1);
 
-$offcanvas-horizontal-width: 50%;
+$offcanvas-horizontal-width: 232px;
 //$btn-close-opacity: 1;
 //$btn-close-width: 1.5em;
 //$grid-gutter-width: 20px;
