--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import 'my';
 @import 'navbar';
 @import 'header';
 @import 'offer';
