--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -34,7 +34,7 @@
     .navbar-nav {
       margin-bottom: 15px;
       :first-child > .nav-link {
-        color: #f16d7f;
+        color: $primary;
         margin-left: 0;
         padding-top: 0;
       }
