--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,12 +2,13 @@
 
 $navbar-height: 42px;
 $black: #222222;
-$pink: #ff6a6a;
-$primary: #014524;
+//$pink: #ff6a6a;
+$primary: #f16d7f;
 $mint: #cad7d0;
 $green: #014524;
 $light-pink: #f1e4e6;
-$grey: #6b6b6b;
+$grey: #9f9f9f;
+$gray-dark: #5d5d5d;
 $btn-close-width: 12px;
 
 $enable-grid-classes: false;
