--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,16 +4,4 @@
 @import 'navbar';
 @import 'header';
 @import 'offer';
-// @import './base.scss';
-//@import 'bootstrap/scss/bootstrap.scss';
-// @import './header.scss';
-//@import './style.scss';
-//@import '_breakpoints';
-// $offcanvas-horizontal-width: 40px;
-// $btn-close-opacity: 1;
-// $btn-close-width: 1.5em;
-// $grid-gutter-width: 20px;
-// $font-family-base: 'Inter', sans-serif;
-// $headings-font-weight: 700;
-// $headings-line-height: 1.4;
-// $headings-color: null;
+@import 'fetured';
