--- a/styles/_my.scss
+++ b/styles/_my.scss
@@ -3,6 +3,10 @@
   --bs-navbar-active-color: $black;
   --bs-navbar-color: $black;
 }
+.btn {
+  --bs-btn-focus-box-shadow: 0;
+}
+
 .navbar-dark {
   --bs-navbar-color: #222222;
 }
