--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -31,3 +31,5 @@ $accordion-border-radius: 20px;
 // @import 'bootstrap/scss/functions';
 // @import 'bootstrap/scss/variables';
 // @import 'bootstrap/scss/mixins';
+
+$breadcrumb-active-color: $primary;
