--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -21,7 +21,9 @@
 @include media-breakpoint-up(lg) {
   .services {
     --bs-columns: 3;
-    padding: 104px 0;
+    padding-top: 104px;
+    padding-bottom: 104px;
+
     gap: 30px;
   }
 }
