--- a/styles/_my.scss
+++ b/styles/_my.scss
@@ -1,13 +1,12 @@
 :root {
   --bs-body-color: #222222;
-  --bs-navbar-active-color: $black;
-  --bs-navbar-color: $black;
 }
 .btn {
   --bs-btn-focus-box-shadow: 0;
 }
 
 .navbar-dark {
+  --bs-navbar-active-color: #222222;
   --bs-navbar-color: #222222;
 }
 figure {
