--- a/styles/_subscribe.scss
+++ b/styles/_subscribe.scss
@@ -16,7 +16,7 @@
     line-height: 22px;
     margin-top: 30px;
   }
-  label {
+  .form-label {
     font-weight: 700;
     font-size: 24px;
     line-height: 37px;
@@ -27,6 +27,7 @@
       font-weight: 400;
     }
   }
+
   input {
     padding: 12px 19px;
     background-color: #e1e1e1;
@@ -66,7 +67,7 @@
       font-size: 20px;
       line-height: 24px;
     }
-    label {
+    .form-label {
       line-height: 39px;
     }
   }
